--- a/cs109b_hw2.ipynb
+++ b/cs109b_hw2.ipynb
@@ -357,9 +357,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Helper Functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(filename = 'data/dataset_2_train.csv'):\n",
+    "    data = pd.read_csv(filename)\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def trunc_normal(n = 10, mean = 0.5, std_dev = 0.5, min = 0, max = 1):\n",
+    "    '''\n",
+    "    Returns n from a normal distribution ~N(mean, std_dev^2) truncated between min and max\n",
+    "    '''\n",
+    "    x = np.random.normal(loc=mean, scale = std_dev, size = (1, int(n*2)))[0]\n",
+    "    x_trunc = [s for s in x if (s >=min and s<=max)]\n",
+    "    return x_trunc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class='exercise-r'>\n",
     "\n",
-    "**1.1**  Given the training data, what is the likelihood function $L(\\theta | y_1,\\ldots,y_n)$?  What is the MLE of $\\theta$ as a function of the $y_1,\\ldots,y_n$?  Compute the MLE from the data.\n",
+    "**1.1.a**  Given the training data, what is the likelihood function $L(\\theta | y_1,\\ldots,y_n)$?  \n",
     "\n",
     "\n",
     "\n",
@@ -374,7 +401,7 @@
     "\n",
     "Per the problem statement:\n",
     "$$\n",
-    "Y_i = =\n",
+    "Y_i = \n",
     "\\begin{cases}\n",
     "1    &\\text {if the $i$-th woman uses contraceptives} \\\\\n",
     "0 & \\text {otherwise}\n",
@@ -408,72 +435,79 @@
     "&= \\prod_{i=1}^n P(Y_i = y_i | \\theta) \\\\\n",
     "&= \\prod_{i=1}^n\\theta^{y_i}  (1-\\theta)^{1-y_i}\n",
     "\\end{aligned}\n",
-    "\n",
-    "We will take the log of $L(\\theta | y_1, y_2, ... , y_n)$ because it simplifies working with the expression:\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "\\log({L(\\theta | y_1, y_2, ... , y_n)})\n",
-    "&= \\log \\left(\\prod_{i=1}^n\\ \\theta^{y_i}  (1-\\theta)^{1-y_i}  \\right)\\\\\n",
-    "&= \\sum_{i=1}^n \\left[ y_i \\log{\\theta} + (1-y_i) \\log{(1-\\theta)} \\right]\\\\\n",
-    "&=  \\left(y_1 \\log(\\theta) + (1-y_1) \\log(1-\\theta) \\right)  + \\ldots + \\left( y_n \\log(\\theta) + (1-y_n) \\log(1-\\theta) \\right)\\\\\n",
-    "&=(y_1, y_2, ... , y_n)  \\cdot \\log(\\theta) + [n - (y_1, y_2, ... , y_n)]\\cdot \\log(1-\\theta) \n",
-    "\\end{aligned}\n",
-    "\n",
-    "Recall that:\n",
-    "\n",
-    "$$\\theta \\sim \\text{Normal}(0.5, 0.5^2)$$\n",
-    "\n",
-    "and \n",
-    "\\begin{aligned}\n",
-    "p(\\theta)\n",
-    "&= c\\times\\frac{1}{\\sqrt{2\\pi (0.5)^2}} \\: \\exp\\left(\\frac{-1}{2(0.5)^2}(\\theta-0.5)^2\\right) \\; \\text{for} \\; 0\\leq \\theta \\leq 1 \\; \\text{, and} \\; 0 \\; \\text{otherwise,} \\\\\n",
-    "&= c\\times \\sqrt{\\frac{2}{\\pi}} \\times \\exp[-2(\\theta - 0.5)^2]\n",
-    "\\end{aligned}\n",
-    "\n",
-    "\n",
-    "To find the value of $c$ we will take the $log$ of $p(\\theta)$. Since $p(\\theta)$ is a truncated normal distribution between 0 and 1, we will integrate, equate to 1 and solve for $c$.\n",
-    "\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "\\log(p(\\theta))\n",
-    "&= \\log(c\\times \\sqrt{\\frac{2}{\\pi}} ) + log(\\exp[-2(\\theta - 0.5)^2])\\\\\n",
-    "&= \\log(c\\times \\sqrt{\\frac{2}{\\pi}} ) - (2(\\theta - 0.5)^2)\\\\\n",
-    "&= \\log(c\\times \\sqrt{\\frac{2}{\\pi}} ) - 2\\theta^2 + 2\\theta - 0.5\n",
-    "\\end{aligned}\n",
-    "\n",
-    "Now take integral from 0 to 1 and equate to 1:\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "1\n",
-    "&= \\int_{0}^{1} \\log(c\\times \\sqrt{\\frac{2}{\\pi}}),d\\theta + \\int_{0}^{1} (- 2\\theta^2 + 2\\theta - 0.5) \\,d\\theta \\\\\n",
-    "&= \\log(c\\times \\sqrt{\\frac{2}{\\pi}}) - \\frac{2}{3} + 1 - 0.5\\\\\n",
-    "&= \\log(c\\times \\sqrt{\\frac{2}{\\pi}}) - \\frac{1}{6}\n",
-    "\\end{aligned}\n",
-    "\n",
-    "Solving for $c$:\n",
-    "\\begin{aligned}\n",
-    "c = \\frac{\\exp(\\frac{7}{6})}{\\sqrt{2/\\pi}} \\approx 4.024\n",
-    "\\end{aligned}\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<div class='exercise-r'>\n",
+    "\n",
+    "**1.1.b**   What is the MLE of $\\theta$ as a function of the $y_1,\\ldots,y_n$?  Compute the MLE from the data.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Answer\n",
+    "We will take the log of $L(\\theta | y_1, y_2, ... , y_n)$ because it simplifies working with the expression:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\ln({L(\\theta | y_1, y_2, ... , y_n)})\n",
+    "&= \\ln \\left(\\prod_{i=1}^n\\ \\theta^{y_i}  (1-\\theta)^{1-y_i}  \\right)\\\\\n",
+    "&= \\sum_{i=1}^n \\left[ y_i \\ln{\\theta} + (1-y_i) \\ln{(1-\\theta)} \\right]\\\\\n",
+    "&=  \\left(y_1 \\ln(\\theta) + (1-y_1) \\ln(1-\\theta) \\right)  + \\ldots + \\left( y_n \\ln(\\theta) + (1-y_n) \\ln(1-\\theta) \\right)\\\\\n",
+    "&=(y_1, y_2, ... , y_n)  \\cdot \\ln(\\theta) + [n - (y_1, y_2, ... , y_n)]\\cdot \\ln(1-\\theta) \n",
+    "\\end{aligned}\n",
+    "\n",
+    "\n",
+    "Letting $Y_i = (y_1, y_2, ... , y_n)$: \n",
+    "\\begin{aligned}\n",
+    "\\ln({L(\\theta | Y_i)}) \n",
+    "&=(Y_i)  \\cdot \\ln(\\theta) + [n - Y_i]\\cdot \\ln(1-\\theta) \n",
+    "\\end{aligned}\n",
+    "\n",
+    "The MLE is occurs at a value of \\theta where:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "0  \n",
+    "&= \\frac{d\\ln({L(\\theta | Y_i)}}{d\\theta} \\\\\n",
+    "&=\\frac{d} {d\\theta} \\left[(Y_i)  \\cdot \\ln(\\theta) + [n - Y_i]\\cdot \\ln(1-\\theta) \\right] \\\\ 0\n",
+    "&=  \\frac{Y_i}{\\theta} - \\frac{n - Y_i}{1-\\theta} \n",
+    "\\end{aligned}\n",
+    "\n",
+    "Finally we solve for $\\theta_{MLE}$:\n",
+    "$$\n",
+    "\\theta_{MLE} = Y_i/n\n",
+    "$$ \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class='exercise-r'>\n",
+    "\n",
+    "**1.1.c**   Compute the MLE from the data.\n",
+    "\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0247307704791835\n"
+      "1.4806157067093901\n"
      ]
     },
     {
@@ -494,7 +528,7 @@
     "step = 1/10000\n",
     "theta = np.arange(0,1 + step, step)\n",
     "\n",
-    "c = np.exp(7/6)/((2/np.pi)**.5)\n",
+    "c = np.exp(1/6)/((2/np.pi)**.5)\n",
     "p_theta =  np.sqrt(2/np.pi)*np.exp(-2*((theta-.5)**2))\n",
     "plt.plot(theta, p_theta)\n",
     "print(c)"
@@ -555,14 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def trunc_normal(n = 10, mean = 0.5, std_dev = 0.5, min = 0, max = 1):\n",
-    "    '''\n",
-    "    Returns n from a normal distribution ~N(mean, std_dev^2) truncated between min and max\n",
-    "    '''\n",
-    "    x = np.random.normal(loc=mean, scale = std_dev, size = (1, int(n*2)))[0]\n",
-    "    x_trunc = [s for s in x if (s >=min and s<=max)]\n",
-    "    return x_trunc\n"
+    "\n"
    ]
   },
   {
@@ -1205,6 +1232,86 @@
    "source": [
     "**your answer here**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer\n",
+    "\n",
+    "Per the problem statement:\n",
+    "$$\n",
+    "Y_i = \n",
+    "\\begin{cases}\n",
+    "1    &\\text {if the $i$-th woman uses contraceptives} \\\\\n",
+    "0 & \\text {otherwise}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "We know that the probability model for a Bernoulli distribution is as follows:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "P(Y_i = y | \\theta)=\n",
+    "\\begin{cases}\n",
+    "\\theta    &\\text {for } y = 1\\\\\n",
+    "1 - \\theta & \\text {for } y=0\\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "Equivalent to:\n",
+    "\\begin{aligned}\n",
+    "P(Y_i = y | \\theta)\n",
+    "&= \\theta^{y_i} (1-\\theta)^{1-y_i}\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Where $\\theta$ is the unknown probability a woman uses contraception.\n",
+    "\n",
+    "We get the likelihood function by calculating the probability of the data conditional on $\\theta$, viewed as a function of the parameter:\n",
+    "\\begin{aligned}\n",
+    "L(\\theta | y_1, y_2, ... , y_n)\n",
+    "&=p(y_1, y_2, ... , y_n | \\theta)\\\\\n",
+    "&= P(Y_1 = y_1 | \\theta) \\cdot P(Y_2 = y_2 | \\theta) \\cdot \\ldots P(Y_n = y_n | \\theta) \\\\ \n",
+    "&= \\prod_{i=1}^n P(Y_i = y_i | \\theta) \\\\\n",
+    "&= \\prod_{i=1}^n\\theta^{y_i}  (1-\\theta)^{1-y_i}\n",
+    "\\end{aligned}\n",
+    "\n",
+    "We will take the log of $L(\\theta | y_1, y_2, ... , y_n)$ because it simplifies working with the expression:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\ln({L(\\theta | y_1, y_2, ... , y_n)})\n",
+    "&= \\ln \\left(\\prod_{i=1}^n\\ \\theta^{y_i}  (1-\\theta)^{1-y_i}  \\right)\\\\\n",
+    "&= \\sum_{i=1}^n \\left[ y_i \\ln{\\theta} + (1-y_i) \\ln{(1-\\theta)} \\right]\\\\\n",
+    "&=  \\left(y_1 \\ln(\\theta) + (1-y_1) \\ln(1-\\theta) \\right)  + \\ldots + \\left( y_n \\ln(\\theta) + (1-y_n) \\ln(1-\\theta) \\right)\\\\\n",
+    "&=(y_1, y_2, ... , y_n)  \\cdot \\ln(\\theta) + [n - (y_1, y_2, ... , y_n)]\\cdot \\ln(1-\\theta) \n",
+    "\\end{aligned}\n",
+    "\n",
+    "\n",
+    "Letting $Y_i = (y_1, y_2, ... , y_n)$: \n",
+    "\\begin{aligned}\n",
+    "\\ln({L(\\theta | Y_i)}) \n",
+    "&=(Y_i)  \\cdot \\ln(\\theta) + [n - Y_i]\\cdot \\ln(1-\\theta) \n",
+    "\\end{aligned}\n",
+    "\n",
+    "The MLE is occurs at a value of \\theta where:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "0  \n",
+    "&= \\frac{d\\ln({L(\\theta | Y_i)}}{d\\theta} \\\\\n",
+    "&=\\frac{d} {d\\theta} \\left[(Y_i)  \\cdot \\ln(\\theta) + [n - Y_i]\\cdot \\ln(1-\\theta) \\right] \\\\ 0\n",
+    "&=  \\frac{Y_i}{\\theta} - \\frac{n - Y_i}{1-\\theta} \n",
+    "\\end{aligned}\n",
+    "\n",
+    "Finally we solve for $\\theta$:\n",
+    "$$\n",
+    "\\theta = Y_i/n\n",
+    "$$ \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1223,7 +1330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
