--- a/ac209b_hw2/ac209b_hw2.ipynb
+++ b/ac209b_hw2/ac209b_hw2.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "0.03368973499542734"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,23 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 3,  5,  8,  4,  3,  4,  7,  7,  6,  6,  5,  5,  7,  3,  5,  5,  9,\n",
-       "        4,  6,  4, 10,  2, 10,  2,  5,  7,  2,  9,  2,  6,  3,  6,  4,  5,\n",
-       "        4,  4,  7,  8,  6,  6,  6,  8,  2,  2,  6,  7,  4,  5,  2,  6,  4,\n",
-       "        7,  7,  2,  8,  8,  8,  0,  2,  4,  3,  5,  6,  4,  7,  4,  1,  4,\n",
-       "       11,  7,  5, 10,  8,  2,  5,  5,  7,  4,  9,  9,  4,  3,  8,  2,  4,\n",
-       "        8,  3,  6,  9,  6])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb Cell 14'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtransition\u001b[39m(xt_prior_mu, alpha, n):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=1'>2</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m poisson\u001b[39m.\u001b[39mrvs(mu\u001b[39m=\u001b[39malpha \u001b[39m*\u001b[39m xt_prior_mu, size\u001b[39m=\u001b[39mn)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=3'>4</a>\u001b[0m transition(xt_prior_mu \u001b[39m=\u001b[39;49m [ \u001b[39m9\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m9\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m8\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m4\u001b[39;49m, \u001b[39m11\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m9\u001b[39;49m,  \u001b[39m5\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=4'>5</a>\u001b[0m         \u001b[39m3\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m8\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m9\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m2\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m6\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=5'>6</a>\u001b[0m         \u001b[39m3\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m0\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m2\u001b[39;49m,  \u001b[39m0\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m3\u001b[39;49m, \u001b[39m10\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m2\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m0\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=6'>7</a>\u001b[0m         \u001b[39m1\u001b[39;49m,  \u001b[39m8\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m7\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m1\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m7\u001b[39;49m, \u001b[39m10\u001b[39;49m,  \u001b[39m7\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=7'>8</a>\u001b[0m         \u001b[39m6\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m8\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m8\u001b[39;49m, \u001b[39m11\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m1\u001b[39;49m,  \u001b[39m1\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m6\u001b[39;49m,  \u001b[39m2\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m3\u001b[39;49m,  \u001b[39m4\u001b[39;49m,  \u001b[39m8\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=8'>9</a>\u001b[0m         \u001b[39m6\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m2\u001b[39;49m,  \u001b[39m5\u001b[39;49m,  \u001b[39m4\u001b[39;49m], alpha \u001b[39m=\u001b[39;49m \u001b[39m.5\u001b[39;49m, n \u001b[39m=\u001b[39;49m \u001b[39m90\u001b[39;49m)\n",
+      "\u001b[1;32m/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb Cell 14'\u001b[0m in \u001b[0;36mtransition\u001b[0;34m(xt_prior_mu, alpha, n)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtransition\u001b[39m(xt_prior_mu, alpha, n):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/vargas/Desktop/cs209b_hw2/ac209b_hw2/ac209b_hw2.ipynb#ch0000013?line=1'>2</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m poisson\u001b[39m.\u001b[39mrvs(mu\u001b[39m=\u001b[39malpha \u001b[39m*\u001b[39;49m xt_prior_mu, size\u001b[39m=\u001b[39mn)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
+     ]
     }
    ],
    "source": [
@@ -287,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5, 2, 1, 2, 1, 4, 2, 1, 1, 3])"
+       "array([1, 1, 4, 2, 4, 1, 3, 2, 0, 3])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,22 +530,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize: [ 6  9 12 12  9  9 15  7 15  9]\n",
+      "\n",
+      "x0 [ 6  9 12 12  9  9 15  7 15  9]\n",
+      "w [0.06305546 0.12511004 0.09478033 0.09478033 0.12511004 0.12511004\n",
+      " 0.03471807 0.09007923 0.03471807 0.12511004]\n",
+      "resampling: [9, 9, 9, 7, 15, 9, 9, 9, 12, 15]\n",
+      "transition [ 7  8 13 21  7 10  9 12  8 11]\n",
+      "\n",
+      "x0 [ 7  8 13 21  7 10  9 12  8 11]\n",
+      "w [0.09007923 0.11259903 0.07290795 0.00088861 0.09007923 0.12511004\n",
+      " 0.12511004 0.09478033 0.11259903 0.1137364 ]\n",
+      "resampling: [7, 12, 7, 8, 8, 7, 11, 8, 8, 8]\n",
+      "transition [ 9 13 19 10 15 10 13 11 10  9]\n",
+      "\n",
+      "x0 [ 9 13 19 10 15 10 13 11 10  9]\n",
+      "w [0.12511004 0.07290795 0.00373216 0.12511004 0.03471807 0.12511004\n",
+      " 0.07290795 0.1137364  0.12511004 0.12511004]\n",
+      "resampling: [11, 10, 11, 11, 10, 13, 9, 10, 11, 10]\n",
+      "transition [13  8 10  3  8 10 14 11 10 10]\n",
+      "\n",
+      "x0 [13  8 10  3  8 10 14 11 10 10]\n",
+      "w [0.07290795 0.11259903 0.12511004 0.00756665 0.11259903 0.12511004\n",
+      " 0.0520771  0.1137364  0.12511004 0.12511004]\n",
+      "resampling: [8, 8, 10, 8, 10, 10, 11, 8, 8, 10]\n",
+      "transition [ 9  9 12 11 11 11 16 12  8  7]\n",
+      "\n",
+      "x0 [ 9  9 12 11 11 11 16 12  8  7]\n",
+      "w [0.12511004 0.12511004 0.09478033 0.1137364  0.1137364  0.1137364\n",
+      " 0.02169879 0.09478033 0.11259903 0.09007923]\n",
+      "resampling: [11, 11, 8, 9, 8, 11, 7, 8, 9, 11]\n",
+      "transition [17  5  6  9 15  7 13  4 10  9]\n",
+      "\n",
+      "x0 [17  5  6  9 15  7 13  4 10  9]\n",
+      "w [0.012764   0.03783327 0.06305546 0.12511004 0.03471807 0.09007923\n",
+      " 0.07290795 0.01891664 0.12511004 0.12511004]\n",
+      "resampling: [10, 9, 10, 9, 9, 9, 9, 9, 10, 10]\n",
+      "transition [ 9 10  9  9 12  8 15 13 16  7]\n",
+      "\n",
+      "x0 [ 9 10  9  9 12  8 15 13 16  7]\n",
+      "w [0.12511004 0.12511004 0.12511004 0.12511004 0.09478033 0.11259903\n",
+      " 0.03471807 0.07290795 0.02169879 0.09007923]\n",
+      "resampling: [16, 9, 8, 16, 15, 10, 10, 7, 13, 9]\n",
+      "transition [11  5  5  6  7 10 11  6 12  6]\n",
+      "\n",
+      "x0 [11  5  5  6  7 10 11  6 12  6]\n",
+      "w [0.1137364  0.03783327 0.03783327 0.06305546 0.09007923 0.12511004\n",
+      " 0.1137364  0.06305546 0.09478033 0.06305546]\n",
+      "resampling: [11, 11, 5, 10, 6, 11, 12, 7, 12, 10]\n",
+      "transition [13 12 13  9 11 12  8  4  9  8]\n",
+      "\n",
+      "x0 [13 12 13  9 11 12  8  4  9  8]\n",
+      "w [0.07290795 0.09478033 0.07290795 0.12511004 0.1137364  0.09478033\n",
+      " 0.11259903 0.01891664 0.12511004 0.11259903]\n",
+      "resampling: [12, 8, 13, 9, 4, 9, 9, 13, 9, 12]\n",
+      "transition [10 11  8 10 14  6 13 12 12 11]\n",
+      "\n",
+      "x0 [10 11  8 10 14  6 13 12 12 11]\n",
+      "w [0.12511004 0.1137364  0.11259903 0.12511004 0.0520771  0.06305546\n",
+      " 0.07290795 0.09478033 0.09478033 0.1137364 ]\n",
+      "resampling: [8, 11, 10, 14, 13, 14, 12, 12, 6, 6]\n",
+      "transition [ 6  9 13  5 11 15 14  7 14 12]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2"
+       "[array([ 6,  9, 12, 12,  9,  9, 15,  7, 15,  9]),\n",
+       " array([ 7,  8, 13, 21,  7, 10,  9, 12,  8, 11]),\n",
+       " array([ 9, 13, 19, 10, 15, 10, 13, 11, 10,  9]),\n",
+       " array([13,  8, 10,  3,  8, 10, 14, 11, 10, 10]),\n",
+       " array([ 9,  9, 12, 11, 11, 11, 16, 12,  8,  7]),\n",
+       " array([17,  5,  6,  9, 15,  7, 13,  4, 10,  9]),\n",
+       " array([ 9, 10,  9,  9, 12,  8, 15, 13, 16,  7]),\n",
+       " array([11,  5,  5,  6,  7, 10, 11,  6, 12,  6]),\n",
+       " array([13, 12, 13,  9, 11, 12,  8,  4,  9,  8]),\n",
+       " array([10, 11,  8, 10, 14,  6, 13, 12, 12, 11]),\n",
+       " array([ 6,  9, 13,  5, 11, 15, 14,  7, 14, 12])]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "def particle_filter(alpha, N, init_lambda):\n",
+    "    n = N\n",
+    "    # initialize \n",
+    "    x_0 = initialize(n=n, init_lambda=init_lambda)\n",
+    "    print('initialize:', x_0)\n",
+    "    xt_mu=init_lambda\n",
+    "    mu_hat = [x_0]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        print()\n",
+    "        print('x0', x_0)\n",
+    "        w = p_observation(xt_mu=xt_mu, yt_k=x_0)\n",
+    "        print('w', w)\n",
+    "        resampling_x = resample(x_0, w)\n",
+    "        print('resampling:',resampling_x)\n",
+    "        x_0 = transition(xt_prior_mu=xt_mu, alpha=alpha, n=n)\n",
+    "        print('transition', x_0)\n",
+    "        xt_mu = alpha * xt_mu\n",
+    "        mu_hat.append(x_0)\n",
+    "    return mu_hat\n",
+    "    \n",
+    "\n",
+    "particle_filter(alpha=1, N=10, init_lambda=10)"
    ]
   },
   {
@@ -606,12 +702,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([159, 150, 179, 150, 167, 149, 176, 171, 166, 156, 136, 159, 138,\n",
+       "       158, 167, 184, 160, 147, 149, 131, 155, 128, 151, 159, 148, 166,\n",
+       "       161, 149, 140, 157])"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here\n",
-    "\n"
+    "particle_filter(alpha=1.1, N=30, init_lambda=9)\n"
    ]
   },
   {
@@ -820,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
